# xela_models

./: CMakeLists.txt  package.xml
launch/: view_robot.launch.py
mesh_simplified/: finger_link_1.stl  finger_link_2.stl  finger_link_3.stl  finger_link_4.stl  palm.stl  thumb_link_1.stl  thumb_link_2.stl  thumb_link_3.stl  thumb_link_4.stl
rviz/: my_urdf.rviz  urdf.rviz  xela_allegro.rviz
urdf/: 4x4.urdf  allegro_hand_right.xacro  my_xela_allegro.urdf  tactile_xela_allegro.urdf  xela.xacro  xela_allegro_real.urdf
